tests/snapshots/run_file__field_vectorization.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/field_vectorization.bend
---
Bool/T
