tests/snapshots/run_file__field_vectorization.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/field_vectorization.hvm
---
Strict mode:

Result: T
- ITRS: 127
- TIME: 0.00s
- MIPS: 19.50
