tests/snapshots/run_file__filter_bool_id.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/filter_bool_id.bend
---
NumScott:
[Bool/True]

Scott:
[Bool/True]
