tests/snapshots/run_file__floating_numbers.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/floating_numbers.bend
---
NumScott:
[18.072, 0.125, 5.625, 2863333376.000, 10.625]

Scott:
[18.072, 0.125, 5.625, 2863333376.000, 10.625]
