tests/snapshots/run_file__fold_with_state.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/fold_with_state.bend
---
[1, 2, 3]
