tests/snapshots/run_file__guide_bend_7tree.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/guide_bend_7tree.bend
---
NumScott:
λa (a Tree/Node/tag λb (b Tree/Node/tag λc (c Tree/Node/tag λd (d Tree/Leaf/tag 7) λe (e Tree/Leaf/tag 7)) λf (f Tree/Node/tag λg (g Tree/Leaf/tag 7) λh (h Tree/Leaf/tag 7))) λi (i Tree/Node/tag λj (j Tree/Node/tag λk (k Tree/Leaf/tag 7) λl (l Tree/Leaf/tag 7)) λm (m Tree/Node/tag λn (n Tree/Leaf/tag 7) λo (o Tree/Leaf/tag 7))))

Scott:
λa λ* (a λb λ* (b λc λ* (c λ* λd (d 7) λ* λe (e 7)) λf λ* (f λ* λg (g 7) λ* λh (h 7))) λi λ* (i λj λ* (j λ* λk (k 7) λ* λl (l 7)) λm λ* (m λ* λn (n 7) λ* λo (o 7))))
