tests/snapshots/run_file__guide_bitonic_sort.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/guide_bitonic_sort.bend
---
NumScott:
523776

Scott:
523776
