tests/snapshots/run_file__guide_circle_area.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/guide_circle_area.bend
---
NumScott:
314.000

Scott:
314.000
